syntax = "proto3";

package com.grpc.greetings;

option java_multiple_files = true;


service Greeter {
  rpc sayHello(HelloRequest) returns (HelloResponse){};
  rpc serverStreamHello(HelloRequest) returns (stream HelloResponse){};
  rpc clientStreamNameToSayHello(stream HelloRequest) returns (HelloResponse){};
  rpc everyBodyStreamsHello(stream HelloRequest) returns (stream HelloResponse){};
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}